Fix social links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-150931103-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-150931103-1");
+    </script>
+
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -113,13 +128,13 @@
             I'm an easy to work with, friendly guy.
           </p>
           <div class="social-icons">
-            <a href="linkedin.com/in/sankalpa-timilsina">
+            <a href="https://www.linkedin.com/in/sankalpa-timilsina">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="github.com/sankalpatimilsina12">
+            <a href="https://www.github.com/sankalpatimilsina12">
               <i class="fab fa-github"></i>
             </a>
-            <a href="facebook.com/SankalpaTimilsina">
+            <a href="https://www.facebook.com/SankalpaTimilsina">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
