--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150931103-1"></script>
-<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
-gtag("js",new Date());gtag("config","UA-150931103-1");</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1BQ35282LX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1BQ35282LX');
+</script>
 <meta charset=utf-8 />
 <meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 <meta name=description content="Hey there! My name is Sankalpa Timilsina. I I&#8217;m a Computer Science undergraduate and a passionate NodeJS developer."/>
