Update website, resume

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 <meta charset=utf-8 />
 <meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-<meta name=description content="Hey there! My name is Sankalpa Timilsina. I I&#8217;m a Computer Science undergraduate and a passionate NodeJS developer."/>
+<meta name=description content="Hey there! My name is Sankalpa Timilsina. I I&#8217;m a Computer Science graduate and a passionate software developer."/>
 <meta name=author content="Sankalpa Timilsina"/>
 <title>Sankalpa Timilsina</title>
 <link href="./static/vendor/bootstrap/css/bootstrap.min.css" rel=stylesheet />
@@ -63,15 +63,22 @@ Sankalpa
 <span class=text-primary>Timilsina</span>
 </h2>
 <div class="subheading mb-5">
-Ekantakuna, Lalitpur . (977) 984-009-3920
+Cookeville, TENNESSEE. +1 (931) 713-0251
 <a href="mailto:sankalpatimilsina12@gmail.com">sankalpatimilsina12@gmail.com</a>
 </div>
 <p class=lead>
-Hi there! Thank you for taking your time to visit. I am a Node JS
-developer, critic and an avid reader from Kathmandu, Nepal. I
-specialize in launching web sites that add value and make users
-happy. I pride myself on reliable communication with my clients and
-I'm an easy to work with, friendly guy.
+Hi there! Thank you for taking your time to visit. I am a passionate
+software developer, critic and an avid reader from Cookeville, Tennessee. I have more than
+5 years of professional experience in the software industry. Currently, I am a Computer Science graduate
+student at Tennessee Technological University and I am actively researching in the field of Computer Networks.
+During this course, I primarily focused on a proposed future internet architecture called Named Data Networking (NDN) with
+stacks including Kubernetes, and Docker.
+<br /><br />
+I recently interned at Los Alamos National Laboratory during Summer 2023 and explored the usability of NDN with Industrial Control Systems (ICS).
+The primary goal of this research was to introduce NDN as a viable alternative to the current TCP/IP stack in ICS for better security of
+industrial systems. I wrote a Python-based library which alongside a router makes it possible to deploy NDN in ICS!
+<br /><br />
+I am currently looking for full-time opportunities in the field of software development. Please feel free to explore my website and reach out to me if you have any questions.
 </p>
 <div class=social-icons>
 <a href="https://www.linkedin.com/in/sankalpa-timilsina">
@@ -79,9 +86,6 @@ I'm an easy to work with, friendly guy.
 </a>
 <a href="https://www.github.com/sankalpatimilsina12">
 <i class="fab fa-github"></i>
-</a>
-<a href="https://www.facebook.com/SankalpaTimilsina">
-<i class="fab fa-facebook-f"></i>
 </a>
 </div>
 </div>
@@ -92,23 +96,73 @@ I'm an easy to work with, friendly guy.
 <h2 class=mb-5>Experience</h2>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 <div class=resume-content>
-<h3 class=mb-0>Web Developer</h3>
+<h3 class=mb-0>Intern</h3>
+<div class="subheading mb-3">
+Los Alamos National Laboratory
+</div>
+<p>
+I wrote a Python based library which alongside a router demonstrates the possibility of 
+using Named Data Networking (NDN) in Industrial Control Systems (ICS) with Programmable Logic Controllers (PLCs).
+</p>
+</div>
+<div class="resume-date text-md-right">
+<span class=text-primary>May 2023 - August 2023</span>
+</div>
+</div>
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+<div class=resume-content>
+<h3 class=mb-0>Lead Sofware Engineer</h3>
+<div class="subheading mb-3">
+Outcode Software
+</div>
+<p>
+I worked as a project lead to <a href="https://foodtruckleague.com" target=__blank>Food Truck League</a> project. I was responsible
+for handling client communications, project planning, and development. The project had multiple backend services with Wordpress and Django and a
+combination of both server-side rendering with Django and client-side with React.
+</p>
+<p>
+The project spanned a wide range of technologies including AWS EKS (Kubernetes), ECR (Docker), RDS, S3, Route53, etc.
+</p>
+</div>
+<div class="resume-date text-md-right">
+<span class=text-primary>October 2020 - July 2021</span>
+</div>
+</div>
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+<div class=resume-content>
+<h3 class=mb-0>Lead Sofware Engineer</h3>
+<div class="subheading mb-3">
+Insight Workshop
+</div>
+<p>
+Lead and built the learning and training platform for aspiring web developers. 
+It trains the developers on programing languages and communication skills (<a href="https://levelup.com.np" target="_blank">https://levelup.com.np</a>).
+</p>
+<p>
+</p>
+</div>
+<div class="resume-date text-md-right">
+<span class=text-primary>November 2019 - July 2021</span>
+</div>
+</div>
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+<div class=resume-content>
+<h3 class=mb-0>Sofware Engineer</h3>
 <div class="subheading mb-3">
 Eagle Vision IT
 </div>
 <p>
-Worked with microserver systems in RESTful and GraphQL
-architectures. I designed mutlilingual websites with complex
-search capabilities with added power of ElasticSearch.
+I worked with microserver systems in RESTful and GraphQL
+architectures. 
 </p>
 <p>
-Responsible for devops activities with close proximity of AWS
+I was responsible for DevOps activities with close proximity of AWS
 systems. I handled projects from the structural setups to
 deployment.
 </p>
 </div>
 <div class="resume-date text-md-right">
-<span class=text-primary>March 2017 - July 2019</span>
+<span class=text-primary>January 2017 - November 2019</span>
 </div>
 </div>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -116,10 +170,9 @@ deployment.
 <h3 class=mb-0>Intern</h3>
 <div class="subheading mb-3">Leapfrog Technology Inc.</div>
 <p>
-Pixel perfect design of web pages using HTML and CSS. Developed
+I was responsible for pixel perfect design of web pages using HTML and CSS. I wrote a
 browser based collision detection game, a Nepali datepicker and
-an WYSIWYG editor using vanilla JS. Designed responsive web
-pages.
+an WYSIWYG editor using vanilla JS. 
 </p>
 </div>
 <div class="resume-date text-md-right">
@@ -134,25 +187,24 @@ pages.
 <h2 class=mb-5>Education</h2>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 <div class=resume-content>
-<h3 class=mb-0>Institute of Engineering, Pulchowk Campus</h3>
+<h3 class=mb-0>Tennessee Technological University</h3>
 <div class="subheading mb-3">
-Bachelors in Computer Engineering
+Masters in Computer Science
 </div>
-<p>First Division</p>
 </div>
 <div class="resume-date text-md-right">
-<span class=text-primary>2012 - 2016</span>
+<span class=text-primary>2021 - 2023</span>
 </div>
 </div>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
 <div class=resume-content>
-<h3 class=mb-0>Aroma Higher Secondary School</h3>
-<div class="subheading mb-3">+2 in Science</div>
-<p>Distinction</p>
+<h3 class=mb-0>Institute of Engineering, Pulchowk Campus</h3>
+<div class="subheading mb-3">
+Bachelors in Computer Engineering
+</div>
 </div>
 <div class="resume-date text-md-right">
-<span class=text-primary>2010 - 2012</span>
-</div>
+<span class=text-primary>2012 - 2017</span>
 </div>
 </div>
 </section>
@@ -163,6 +215,15 @@ Bachelors in Computer Engineering
 <div class="subheading mb-3">Programming Languages &amp; Tools</div>
 <ul class="list-inline dev-icons">
 <li class=list-inline-item>
+<li class=list-inline-item>
+<i class="fab fa-docker"></i>
+</li>
+<li class=list-inline-item>
+<i class="fab fa-node"></i>
+</li>
+<li class=list-inline-item>
+<i class="fab fa-python"></i>
+</li>
 <i class="fab fa-html5"></i>
 </li>
 <li class=list-inline-item>
@@ -172,19 +233,10 @@ Bachelors in Computer Engineering
 <i class="fab fa-js-square"></i>
 </li>
 <li class=list-inline-item>
-<i class="fab fa-node"></i>
-</li>
-<li class=list-inline-item>
 <i class="fab fa-python"></i>
 </li>
 <li class=list-inline-item>
-<i class="fab fa-gulp"></i>
-</li>
-<li class=list-inline-item>
 <i class="fab fa-aws"></i>
-</li>
-<li class=list-inline-item>
-<i class="fab fa-grunt"></i>
 </li>
 <li class=list-inline-item>
 <i class="fab fa-git"></i>
@@ -232,9 +284,11 @@ Deployment
 </div>
 <div class=swiper-container>
 <div class=swiper-wrapper>
+<a class=swiper-slide style="background-image:url('./static/img/traffic_capture_scripts.png')" href="https://github.com/tntech-ngin/ndn-traffic-capture-scripts" target="_blank"></a>
+<a class=swiper-slide style="background-image:url('./static/img/ndn_with_kubernetes.png')" href="https://github.com/sankalpatimilsina12/NDN-with-Kubernetes" target="_blank"></a>
 <a class=swiper-slide style="background-image:url('./static/img/BGJobFinder.png')" href="https://bgjobfinder.jp/" target=__blank></a>
+<a class=swiper-slide style="background-image:url('./static/img/ndnSIM_replay.png')" href="https://github.com/tntech-ngin/ndn-traffic-replay-ndnSIM" target="_blank"></a>
 <a class=swiper-slide style="background-image:url('./static/img/5Spades.png')" href="https://5spades.com/" target=__blank></a>
-<a class=swiper-slide style="background-image:url('./static/img/Roomtohome.png')" href="#"></a>
 </div>
 <div class=swiper-pagination></div>
 </div>
