--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ using Named Data Networking (NDN) in Industrial Control Systems (ICS) with Progr
 </div>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 <div class=resume-content>
-<h3 class=mb-0>Lead Sofware Engineer</h3>
+<h3 class=mb-0>Lead Software Engineer</h3>
 <div class="subheading mb-3">
 Outcode Software
 </div>
@@ -130,7 +130,7 @@ The project spanned a wide range of technologies including AWS EKS (Kubernetes),
 </div>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 <div class=resume-content>
-<h3 class=mb-0>Lead Sofware Engineer</h3>
+<h3 class=mb-0>Lead Software Engineer</h3>
 <div class="subheading mb-3">
 Insight Workshop
 </div>
@@ -147,7 +147,7 @@ It trains the developers on programing languages and communication skills (<a hr
 </div>
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 <div class=resume-content>
-<h3 class=mb-0>Sofware Engineer</h3>
+<h3 class=mb-0>Software Engineer</h3>
 <div class="subheading mb-3">
 Eagle Vision IT
 </div>
